--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,7 @@
 <body>
     <!-- This is an example app structure, you can modify this as much as you choose --> 
     <header>
-        <h1>lurkforwork.com</h1>
+        <h1>Hello COMP6080 A3! lurkforwork.com</h1>
         <nav>
             <li class="nav-item">Item</li>
             <li class="nav-item">Item</li>
