--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,22 +8,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- You can add your styles and scripts here -->
     <link rel="stylesheet" type="text/css" media="screen" href="styles/global.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
+
 <body>
-    <!-- This is an example app structure, you can modify this as much as you choose --> 
-    <header>
-        <h1>Hello COMP6080 A3! lurkforwork.com</h1>
-        <nav>
-            <li class="nav-item">Item</li>
-            <li class="nav-item">Item</li>
-        </nav>
-    </header>
     <main role="main">
-        <!-- app goes here --> 
+        <div>
+            <h1>Register</h1>
+            <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-email">Email</span>
+                <input type="text" class="form-control" placeholder="jiaxin.weng959@gmail.com" aria-label="Email"
+                    aria-describedby="basic-email" id="register-email">
+            </div>
+            <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-name">Name</span>
+                <input type="text" class="form-control" placeholder="Jiaxin" aria-label="Name"
+                    aria-describedby="basic-name" id="register-name">
+            </div>
+            <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-password1">Password</span>
+                <input type="password" class="form-control" aria-label="Password" aria-describedby="basic-password1"
+                    id="register-password">
+            </div>
+            <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-password2">Confirm Password</span>
+                <input type="password" class="form-control" aria-label="Confirm Password"
+                    aria-describedby="basic-password2" id="register-password-confirm">
+            </div>
+            <button id="btn-register" type="button" class="btn btn-primary">Submit</button>
+        </div>
     </main>
-    <footer>
-        <p>&copy; lurkforwork.com</p>
-    </footer>
     <script type="module" src="src/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
