demo followed, abstrat the apiCall function

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -31,7 +31,7 @@
         </div>
 
         <div id="page-register" class="page hide">
-            <h1>Register check merge ok</h1>
+            <h1>Register</h1>
             <div class="input-group mb-3">
                 <span class="input-group-text" id="basic-email">Email</span>
                 <input type="text" class="form-control" placeholder="jiaxin.weng959@gmail.com" aria-label="Email"
