format the apicall function more clearly

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -56,13 +56,14 @@
             <a internal-link="login" href="#"><p>(Login instead)</p></a>
         </div>
 
-        <div id="page-job" class="page hide">
+        <div id="page-feed" class="page hide">
             <button class="btn btn-primary" id="btn-logout">Logout</button>
-            <h1>Job page</h1> 
+            <h1>Feed page</h1> 
+            <div id="feed-content"></div>
         </div>
 
         <!-- above are pages, under are smal componets -->
-
+ 
         <!-- Modal, the code refer to https://getbootstrap.com/docs/5.3/components/modal/ -->
         <!-- This part used for Error Popup -->
         <div class="modal fade" id="errorPopup" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
