same as checkLikesList, completed checkCommentsList; add style on both of them to make the user name more clearly.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -93,8 +93,26 @@
                         <h5 class="modal-title" id="jobLikesModalLabel">Job Likes</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                     </div>
-                    <div class="modal-body" id="jobLikesContent">
+                    <div class="modal-body job-modal-content" id="jobLikesContent">
                         <!-- adding likes of current job -->
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- This part used for job comments modal -->
+        <div class="modal fade jobCommentsModal" id="jobCommentsModal" tabindex="-1">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="jobCommentsModalLabel">Job Comments</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                    </div>
+                    <div class="modal-body job-modal-content" id="jobCommentsContent">
+                        <!-- adding commentss of current job -->
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
