style problem fiexd, 1. page title responsive, 2. job modal width responsive

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -56,7 +56,7 @@
 
         <div id="page-feed" class="page hide">
             <div id="top-bar">
-                <h1>Feed page</h1>
+                <h1>LurkForWork</h1>
                 <button class="btn btn-primary" id="btn-logout">Logout</button>
             </div>
             <div id="feed-container">
