--- a/frontend/index.html
+++ b/frontend/index.html
@@ -62,6 +62,13 @@
             <div id="feed-container">
                 <!-- adding feed card to here by js -->
             </div>
+
+            <div id="feed-loading" style="display: none;">
+                <p>loading more jobs...</p>
+            </div>
+            <div id="feed-no-more" style="display: none;">
+                <p>no more jobs</p>
+            </div>
         </div>
 
         <!-- above are pages, under are smal componets -->
