--- a/frontend/index.html
+++ b/frontend/index.html
@@ -56,8 +56,11 @@
 
         <div id="page-feed" class="page hide">
             <div id="top-bar">
-                <h1>LurkForWork</h1>
-                <button class="btn btn-primary" id="btn-logout">Logout</button>
+                <h1>LurkForWork <span class="subtext">Home page</span> </h1>
+                <div class="button-group">
+                    <button class="btn btn-primary" id="btn-my-profile">Profile</button>
+                    <button class="btn btn-primary btn-logout">Logout</button>
+                </div>
             </div>
             <div id="feed-container">
                 <!-- adding feed card to here by js -->
@@ -71,6 +74,18 @@
             </div>
         </div>
 
+        <div id="page-myprofile" class="page hide">
+            <div id="top-bar">
+                <h1>LurkForWork <span class="subtext">My profile</span> </h1>
+                <div class="button-group">
+                    <button class="btn btn-primary" id="btn-back-home">Back home</button>
+                    <button class="btn btn-primary btn-logout">Logout</button>
+                </div>
+            </div>
+            <div id="my-profile-container">
+                <!-- adding my profile info to here by js -->
+            </div>
+        </div>
         <!-- above are pages, under are smal componets -->
 
         <!-- Modal, the code refer to https://getbootstrap.com/docs/5.3/components/modal/ -->
