others profile now working on profile's watcher, still need work on job's like list and comments list

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -55,7 +55,7 @@
         </div>
 
         <div id="page-feed" class="page hide">
-            <div id="top-bar">
+            <div class="top-bar">
                 <h1>LurkForWork <span class="subtext">Home page</span> </h1>
                 <div class="button-group">
                     <button class="btn btn-primary" id="btn-my-profile">Profile</button>
@@ -74,11 +74,11 @@
             </div>
         </div>
 
-        <div id="page-myprofile" class="page hide">
-            <div id="top-bar">
+        <div id="page-my-profile" class="page hide">
+            <div class="top-bar">
                 <h1>LurkForWork <span class="subtext">My profile</span> </h1>
                 <div class="button-group">
-                    <button class="btn btn-primary" id="btn-back-home">Back home</button>
+                    <button class="btn btn-primary btn-back-home">Back home</button>
                     <button class="btn btn-primary btn-logout">Logout</button>
                 </div>
             </div>
@@ -86,6 +86,20 @@
                 <!-- adding my profile info to here by js -->
             </div>
         </div>
+
+        <div id="page-others-profile" class="page hide">
+            <div class="top-bar">
+                <h1>LurkForWork <span class="subtext">Others profile</span> </h1>
+                <div class="button-group">
+                    <button class="btn btn-primary btn-back-home">Back home</button>
+                    <button class="btn btn-primary btn-logout">Logout</button>
+                </div>
+            </div>
+            <div id="others-profile-container">
+                <!-- adding others profile info to here by js -->
+            </div>
+        </div>
+        
         <!-- above are pages, under are smal componets -->
 
         <!-- Modal, the code refer to https://getbootstrap.com/docs/5.3/components/modal/ -->
