will go my profile if to to current id user

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -58,7 +58,7 @@
             <div class="top-bar">
                 <h1>LurkForWork <span class="subtext">Home page</span> </h1>
                 <div class="button-group">
-                    <button class="btn btn-primary" id="btn-my-profile">Profile</button>
+                    <button class="btn btn-primary" id="btn-my-profile">My Profile</button>
                     <button class="btn btn-primary btn-logout">Logout</button>
                 </div>
             </div>
