update profile function complete

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -158,7 +158,7 @@
         </div>
 
 
-        <!-- Add this modal HTML to your page -->
+        <!-- This part used for update profile modal -->
         <div class="modal fade" id="updateProfileModal" tabindex="-1">
             <div class="modal-dialog">
                 <div class="modal-content">
@@ -169,17 +169,17 @@
                     <div class="modal-body">
                         <div class="input-group mb-3">
                             <span class="input-group-text">Email</span>
-                            <input type="text" class="form-control" placeholder="z5570225@unsw.edu.au" id="update-email">
+                            <input type="text" class="form-control" placeholder="Enter new email" id="update-email">
                         </div>
 
                         <div class="input-group mb-3">
                             <span class="input-group-text">Password</span>
-                            <input type="password" class="form-control" id="update-password">
+                            <input type="password" class="form-control" placeholder="Enter new password" id="update-password">
                         </div>
 
                         <div class="input-group mb-3">
                             <span class="input-group-text">Name</span>
-                            <input type="text" class="form-control" placeholder="Jiaxin" id="update-name">
+                            <input type="text" class="form-control" placeholder="Enter new name" id="update-name">
                         </div>
 
                         <div class="input-group mb-3">
