ablt to watch and unwatch other user, using alert to prompt it successful, shold use better way, may change it in future

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -174,7 +174,8 @@
 
                         <div class="input-group mb-3">
                             <span class="input-group-text">Password</span>
-                            <input type="password" class="form-control" placeholder="Enter new password" id="update-password">
+                            <input type="password" class="form-control" placeholder="Enter new password"
+                                id="update-password">
                         </div>
 
                         <div class="input-group mb-3">
