add buttons used for add job, serach user

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -58,7 +58,12 @@
             <div class="top-bar">
                 <h1>LurkForWork <span class="subtext">Home page</span> </h1>
                 <div class="button-group">
-                    <button class="btn btn-primary" id="btn-my-profile">My Profile</button>
+                    <button class="btn btn-primary btn-add-job btn-big">📋 Add job</button>
+                    <button class="btn btn-primary btn-add-job btn-small">📋</button>
+                    <button class="btn btn-primary btn-search-user btn-big">🔎 Search user</button>
+                    <button class="btn btn-primary btn-search-user btn-small">🔎</button>
+                    <button class="btn btn-primary btn-my-profile btn-big" id="btn-my-profile">👤 My Profile</button>
+                    <button class="btn btn-primary btn-my-profile btn-small" id="btn-my-profile">👤</button>
                     <button class="btn btn-primary btn-logout">Logout</button>
                 </div>
             </div>
@@ -78,6 +83,10 @@
             <div class="top-bar">
                 <h1>LurkForWork <span class="subtext">My profile</span> </h1>
                 <div class="button-group">
+                    <button class="btn btn-primary btn-add-job btn-big">📋 Add job</button>
+                    <button class="btn btn-primary btn-add-job btn-small">📋</button>
+                    <button class="btn btn-primary btn-search-user btn-big">🔎 Search user</button>
+                    <button class="btn btn-primary btn-search-user btn-small">🔎</button>
                     <button class="btn btn-primary btn-back-home">Back home</button>
                     <button class="btn btn-primary btn-logout">Logout</button>
                 </div>
@@ -91,6 +100,10 @@
             <div class="top-bar">
                 <h1>LurkForWork <span class="subtext">Others profile</span> </h1>
                 <div class="button-group">
+                    <button class="btn btn-primary btn-add-job btn-big">📋 Add job</button>
+                    <button class="btn btn-primary btn-add-job btn-small">📋</button>
+                    <button class="btn btn-primary btn-search-user btn-big">🔎 Search user</button>
+                    <button class="btn btn-primary btn-search-user btn-small">🔎</button>
                     <button class="btn btn-primary btn-back-home">Back home</button>
                     <button class="btn btn-primary btn-logout">Logout</button>
                 </div>
