--- a/frontend/index.html
+++ b/frontend/index.html
@@ -208,6 +208,31 @@
                 </div>
             </div>
         </div>
+
+        <!-- This part used for search user modal -->
+        <div class="modal fade" id="searchUserModal" tabindex="-1">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Search User</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                    </div>
+                    <div class="modal-body">
+                        <h2> Search user's email to watch them:</h2>
+                        <div class="input-group mb-3">
+                            <span class="input-group-text">Email</span>
+                            <input type="text" class="form-control" placeholder="Enter user email" id="search-user-email">
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn btn-primary" id="btn-watch-searched-user">Update</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
     </main>
     <script type="module" src="src/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
