--- a/frontend/index.html
+++ b/frontend/index.html
@@ -117,7 +117,8 @@
 
         <!-- Modal, the code refer to https://getbootstrap.com/docs/5.3/components/modal/ -->
 
-        <div class="modal fade" id="errorPopup" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1">
+        <!-- <div class="modal fade" id="errorPopup" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"> -->
+        <div class="modal fade" id="errorPopup" tabindex="-1">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -221,7 +222,8 @@
                         <h2> Search user's email to watch them:</h2>
                         <div class="input-group mb-3">
                             <span class="input-group-text">Email</span>
-                            <input type="text" class="form-control" placeholder="Enter user email" id="search-user-email">
+                            <input type="text" class="form-control" placeholder="Enter user email"
+                                id="search-user-email">
                         </div>
                     </div>
                     <div class="modal-footer">
@@ -232,7 +234,41 @@
             </div>
         </div>
 
-
+        <!-- This part used for add job modal -->
+        <div class="modal fade" id="addJobModal" tabindex="-1">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Add Job</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="input-group mb-3">
+                            <span class="input-group-text">Title</span>
+                            <input type="text" class="form-control" placeholder="Job Title" id="add-job-title">
+                        </div>
+                        <div class="input-group mb-3">
+                            <span class="input-group-text">Date</span>
+                            <!-- <input type="text" class="form-control" placeholder="Starting Date (DD/MM/YYYY)"
+                                id="add-job-date"> -->
+                            <input type="date" class="form-control" id="add-job-date">
+                        </div>
+                        <div class="input-group mb-3">
+                            <span class="input-group-text">Description</span>
+                            <textarea class="form-control" rows="3" placeholder="Job Description" id="add-job-description"></textarea>
+                        </div>
+                        <div class="input-group mb-3">
+                            <span class="input-group-text">Image</span>
+                            <input type="file" class="form-control" id="add-job-image" accept="image/*">
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn btn-primary" id="btn-add-job">Add Job!</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
     <script type="module" src="src/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
