bug from last commit fixed

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -67,7 +67,7 @@
                     <button class="btn btn-primary btn-logout">Logout</button>
                 </div>
             </div>
-            <div id="feed-container">
+            <div class="feed-container" id="feed-container">
                 <!-- adding feed card to here by js -->
             </div>
 
