--- a/frontend/index.html
+++ b/frontend/index.html
@@ -269,6 +269,40 @@
                 </div>
             </div>
         </div>
+
+        <!-- This part used for update job modal -->
+        <div class="modal fade" id="updateJobModal" tabindex="-1">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Update Job</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="input-group mb-3">
+                            <span class="input-group-text">Title</span>
+                            <input type="text" class="form-control" placeholder="Job Title" id="update-job-title">
+                        </div>
+                        <div class="input-group mb-3">
+                            <span class="input-group-text">Date</span>
+                            <input type="date" class="form-control" id="update-job-date">
+                        </div>
+                        <div class="input-group mb-3">
+                            <span class="input-group-text">Description</span>
+                            <textarea class="form-control" rows="3" placeholder="Job Description" id="update-job-description"></textarea>
+                        </div>
+                        <div class="input-group mb-3">
+                            <span class="input-group-text">Image</span>
+                            <input type="file" class="form-control" id="update-job-image" accept="image/*">
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn btn-primary" id="btn-update-job">Save!</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
     <script type="module" src="src/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
