--- a/frontend/index.html
+++ b/frontend/index.html
@@ -303,7 +303,30 @@
                 </div>
             </div>
         </div>
+
+        <!-- This part used for leave modal -->
+        <div class="modal fade" id="leaveCommentsModal" tabindex="-1">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Leave Comments</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="input-group mb-3">
+                            <span class="input-group-text">Comments</span>
+                            <textarea class="form-control" rows="5" placeholder="Your comments..." id="comments-text"></textarea>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn btn-primary" id="btn-comment">comment</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
+
     <script type="module" src="src/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
