--- a/frontend/index.html
+++ b/frontend/index.html
@@ -255,7 +255,8 @@
                         </div>
                         <div class="input-group mb-3">
                             <span class="input-group-text">Description</span>
-                            <textarea class="form-control" rows="3" placeholder="Job Description" id="add-job-description"></textarea>
+                            <textarea class="form-control" rows="3" placeholder="Job Description"
+                                id="add-job-description"></textarea>
                         </div>
                         <div class="input-group mb-3">
                             <span class="input-group-text">Image</span>
@@ -289,7 +290,8 @@
                         </div>
                         <div class="input-group mb-3">
                             <span class="input-group-text">Description</span>
-                            <textarea class="form-control" rows="3" placeholder="Job Description" id="update-job-description"></textarea>
+                            <textarea class="form-control" rows="3" placeholder="Job Description"
+                                id="update-job-description"></textarea>
                         </div>
                         <div class="input-group mb-3">
                             <span class="input-group-text">Image</span>
@@ -315,7 +317,8 @@
                     <div class="modal-body">
                         <div class="input-group mb-3">
                             <span class="input-group-text">Comments</span>
-                            <textarea class="form-control" rows="5" placeholder="Your comments..." id="comments-text"></textarea>
+                            <textarea class="form-control" rows="5" placeholder="Your comments..."
+                                id="comments-text"></textarea>
                         </div>
                     </div>
                     <div class="modal-footer">
