change no more jobs style

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -71,11 +71,11 @@
                 <!-- adding feed card to here by js -->
             </div>
 
-            <div id="feed-loading" style="display: none;">
+            <div class="text-muted" id="feed-loading" style="display: none;">
                 <p>loading more jobs...</p>
             </div>
-            <div id="feed-no-more" style="display: none;">
-                <p>no more jobs</p>
+            <div class="text-muted" id="feed-no-more" style="display: none;">
+                <p>- no more jobs -</p>
             </div>
         </div>
 
