complete progress.csv

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -248,7 +248,7 @@
                             <input type="text" class="form-control" placeholder="Job Title" id="add-job-title">
                         </div>
                         <div class="input-group mb-3">
-                            <span class="input-group-text">Date</span>
+                            <span class="input-group-text">Start Date</span>
                             <!-- <input type="text" class="form-control" placeholder="Starting Date (DD/MM/YYYY)"
                                 id="add-job-date"> -->
                             <input type="date" class="form-control" id="add-job-date">
@@ -285,7 +285,7 @@
                             <input type="text" class="form-control" placeholder="Job Title" id="update-job-title">
                         </div>
                         <div class="input-group mb-3">
-                            <span class="input-group-text">Date</span>
+                            <span class="input-group-text">Start Date</span>
                             <input type="date" class="form-control" id="update-job-date">
                         </div>
                         <div class="input-group mb-3">
