complete usability.md

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,6 +16,9 @@
 <body>
     <main role="main">
         <div id="page-login" class="page hide">
+            <div class="top-bar">
+                <h1>LurkForWork</h1>
+            </div>
             <h1>Login</h1>
             <div class="input-group mb-3">
                 <span class="input-group-text" id="basic-email">Email</span>
@@ -32,6 +35,9 @@
         </div>
 
         <div id="page-register" class="page hide">
+            <div class="top-bar">
+                <h1>LurkForWork</h1>
+            </div>
             <h1>Register</h1>
             <div class="input-group mb-3">
                 <span class="input-group-text" id="basic-email">Email</span>
@@ -67,7 +73,7 @@
                     <button class="btn btn-primary btn-logout">Logout</button>
                 </div>
             </div>
-            <div class="feed-container" id="feed-container">
+            <div class="feed-container" id="feed-container" style="background-color: #F8F8FF">
                 <!-- adding feed card to here by js -->
             </div>
 
